k8s/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: chronocraft
    tier: database
spec:
  selector:
    matchLabels:
      app: chronocraft
      tier: database
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: chronocraft
        tier: database
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: chronocraft
spec:
  ports:
    - port: 3306
  selector:
    app: chronocraft
    tier: database
  clusterIP: None
