k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chronocraft-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - http:
      paths:
      - path: /token
        pathType: Prefix
        backend:
          service:
            name: chronocraft-backend
            port:
              number: 8000
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: chronocraft-backend
            port:
              number: 8000
      - path: /timelines
        pathType: Prefix
        backend:
          service:
            name: chronocraft-backend
            port:
              number: 8000
      - path: /events
        pathType: Prefix
        backend:
          service:
            name: chronocraft-backend
            port:
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chronocraft-frontend
            port:
              number: 80
